// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Link" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <a
    className="css-50pib5-Link"
    rel="noopener noreferrer"
  >
    Link
  </a>
</div>
`;

exports[`"Link" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <a
    className="css-g0x2vf-Link"
    rel="noopener noreferrer"
  >
    Link
  </a>
</div>
`;
